name:                dfinity-discovery
version:             1.0.0
homepage:            https://github.com/dfinity-lab/dfinity-discovery
bug-reports:         https://github.com/dfinity-lab/dfinity-discovery/issues
synopsis:            An implementation of the Kademlia DHT Protocol
description:
    .
    A Haskell implementation of the Kademlia distributed hashtable, an efficient
    way to store and lookup values distributed over a P2P network.
    .
    The implementation is based on the paper
    /Kademlia: A Peer-to-peer Information System Based on the XOR Metric/:
    <http://pdos.csail.mit.edu/~petar/papers/maymounkov-kademlia-lncs.pdf>
    by Petar Maymounkov and David Mazières.
    .
    This library aims to be very simple and pleasant to use, with the downside of
    deciding some of the implementation details, like timeout intervals and
    k-bucket size, for the user.

license:             BSD3
license-file:        LICENSE
author:              fro_ozen <fro_ozen@gmx.de>
maintainer:          DFINITY USA Research <team@dfinity.org>
copyright:           2015 fro_ozen <fro_ozen@gmz.de>,
                     2016 Serokell <hi@serokell.io>,
                     2018 DFINITY Stiftung
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:       git
    location:   https://github.com/dfinity-lab/dfinity-discovery.git

library
  exposed-modules:     DFINITY.Discovery
                       DFINITY.Discovery.Config
                       DFINITY.Discovery.Implementation
                       DFINITY.Discovery.Instance
                       DFINITY.Discovery.Process
                       DFINITY.Discovery.Networking
                       DFINITY.Discovery.Protocol
                       DFINITY.Discovery.Protocol.Parse
                       DFINITY.Discovery.Protocol.Serialize
                       DFINITY.Discovery.ReplyQueue
                       DFINITY.Discovery.Tree
                       DFINITY.Discovery.Types
                       DFINITY.Discovery.Utils
                       DFINITY.Discovery.Signature

  build-depends:       base                 >= 4.7 && < 5
                     , bytestring           >= 0.10.2 && < 0.11
                     , cborg
                     , containers           >= 0.5.5.1
                     , extra                >= 1.4
                     , iproute
                     , memory
                     , MonadRandom
                     , mtl                  >= 2.1.3.1
                     , network              >= 2.6 && < 2.7
                     , random
                     , random-shuffle
                     , serialise
                     , stm                  >= 2.4.3
                     , text                 >= 1.2
                     , time                 >= 1.6
                     , transformers         >= 0.3
                     , cryptonite
                     , contravariant

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall -fno-warn-orphans -O2

test-suite library-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Tests.Protocol
                     , Tests.Networking
                     , Tests.TestTypes
                     , Tests.Types
                     , Tests.Tree
                     , Tests.Instance
                     , Tests.ReplyQueue
                     , Tests.Implementation
  build-depends:       dfinity-discovery
                     , base                 >= 4.7 && < 5
                     , binary               >= 0.8.3
                     , bytestring           >= 0.10.2 && < 0.11
                     , containers           >= 0.5.5.1
                     , data-default         >= 0.7
                     , errors
                     , extra                >= 1.4
                     , HUnit                >= 1.2.5.2
                     , iproute
                     , MonadRandom
                     , mtl                  >= 2.1.3.1
                     , network              >= 2.6 && < 2.7
                     , QuickCheck           >= 2.4
                     , quickcheck-instances
                     , random
                     , random-shuffle
                     , stm                  >= 2.4.3
                     , tasty                >= 0.10.1
                     , tasty-hunit          >= 0.9.0.1
                     , tasty-quickcheck     >= 0.8.3.1
                     , text                 >= 1.2
                     , time                 >= 1.6
                     , transformers         >= 0.3
                     , transformers-compat  >= 0.3.3
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2

executable discovery
  hs-source-dirs:      examples
  main-is:             Discovery.hs
  build-depends:       dfinity-discovery
                     , base                 >= 4.7 && < 5
                     , binary               >= 0.8.3
                     , bytestring           >= 0.10.2 && < 0.11
                     , containers           >= 0.5.5.1
                     , data-default         >= 0.7
                     , extra                >= 1.4
                     , MonadRandom
                     , mtl                  >= 2.1.3.1
                     , network              >= 2.6 && < 2.7
                     , random
                     , random-shuffle
                     , text                 >= 1.2
                     , transformers         >= 0.3
                     , transformers-compat  >= 0.3.3
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2
